rajouté les liens vers politique de confidentialité + supprimé l'ancienne page inscription, qui est maintenant rangé dans Companies new.html.erb

--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -99,7 +99,7 @@
         <% end %>
         <div class="d-flex flex-column justify-content-center align-items-center pb-5">
           <%= company.button :submit, "Créer un compte", class:"btn btn-primary text-white bold" %>
-          <p class='m-2'>En créant un compte, vous acceptez notre <%= link_to "Politique de confidentialité", root_path %></p>
+          <p class='m-2'>En créant un compte, vous acceptez notre <%= link_to "Politique de confidentialité", politique_path %></p>
           <p class="green-bg bold">Vous allez recevoir un mail de confirmation</p>
         </div>
       <% end %>
