--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
       <div class=" d-flex justify-content-center">
         <%= link_to "Plan du site", plan_path, class:"mr-2" %>
         -
-        <%= link_to "Politique de confidentialité", root_path,class:"ml-2" %>
+        <%= link_to "Politique de confidentialité", politique_path,class:"ml-2" %>
       </div>
       <div class="d-flex justify-content-center">
         ©<%= Time.now.year %>
