rajouté un footer à la politique de confidentialité

--- a/app/views/pages/politique_de_confidentialite.html.erb
+++ b/app/views/pages/politique_de_confidentialite.html.erb
@@ -85,6 +85,7 @@
     <p>Les présentes conditions d’utilisation du site sont régies par la loi française et soumises à la compétence des tribunaux du siège social de l’éditeur, sous réserve d’une attribution de compétence spécifique découlant d’un texte de loi ou réglementaire particulier.</p>
 
     <h3>Article 9 –Contactez-nous</h3>
-    <p>Pour toute question, information sur les produits ou sur le site lui même, vous pouvez laissez un message à l’adresse suivante : pauline.r@ekologeek.com</p>
+    <p class="mb-5">Pour toute question, information sur les produits ou sur le site lui même, vous pouvez laissez un message à l’adresse suivante : pauline.r@ekologeek.com</p>
   </div>
+  <%= render 'shared/footer' %>
 </div>
