beaucoup de changements, toujours en cours, faudra pas oublier le bundle install et le db:migrate et db:seed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <div class="container bg-white container-padding my-5 blue">
+    <%= link_to "test du wizard", big_form_path(:company_infos) %>
     <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pro !</b></h2>
     <h2 class="mb-5 text-center"><b>Objectif:</b> réduire vos déchets de fonctionnement de 10%</h2>
 
