--- a/app/views/big_form/company_infos.html.erb
+++ b/app/views/big_form/company_infos.html.erb
@@ -1,6 +1,6 @@
 <h2>Voilà le méga formulaire</h2>
 
-<%= simple_form_for(@application, method: :put, url: wizard_path) do |f| %>
+<%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
   <%= f.input :company_activity %>
   <%= f.input :company_employees_nb %>
   <%= f.input :company_participant_nb %>
