ajouté toutes les pages et champs du formulaire

--- a/app/views/big_form/company_infos.html.erb
+++ b/app/views/big_form/company_infos.html.erb
@@ -1,4 +1,4 @@
-<h2>Voilà le méga formulaire</h2>
+<h1>1ere page, infos sur l'entreprise</h1>
 
 <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
   <%= f.input :company_activity %>
