models company, project, user /change layout devise/ init user routes

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -99,6 +99,9 @@
       <li class="nav-item m-3 bold-link">
         <%= link_to  "Contact", contact_path, class:"nav-link text-light-gray pl-lg-3 position borderus pl-lg-5"%>
       </li>
+      <li class="nav-item m-3 bold-link">
+        <%= link_to  "Connexion", new_user_session_path, class:"nav-link text-light-gray pl-lg-3 position"%>
+      </li>
 
     </ul>
   </div>
