--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -9,11 +8,16 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'shared/navbar_secondary' %>
-    <%= render 'shared/navbar' %>
-    <%= render 'shared/carousel' %>
     <%= render 'shared/flashes' %>
-      <%= yield %>
+
+      <div class="container bg-white">
+        <div class="d-flex justify-content-center">
+          <%= link_to image_tag("logo.jpg", width: 200, class: "text-center"), root_path  %>
+
+        </div>
+        <%= yield %>
+      </div>
+
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
