--- a/app/views/big_form/company_infos.html.erb
+++ b/app/views/big_form/company_infos.html.erb
@@ -1,4 +1,9 @@
-<h1>1ere page, infos sur l'entreprise</h1>
+<h1>Défi ZD Pro - Formulaire Inscription</h1>
+<p class="mb-0">Merci pour votre inscription !</p>
+<p class="mb-0">Avant de vous lancer dans l'aventure du Défi Zéro Déchet des Pros avec nous, permettez-nous de faire connaissance.</p>
+<p>Ce formulaire a pour but de nous donner une première connaissance de votre structure, vos collaborateurs et vous-même en tant que référent·e.</p>
+
+<p>Sans accord express de votre part, toutes réponses communiquées ci-après resteront confidentielles entre vous et les accompagnateurs Ekolo[geek].</p>
 
 <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
   <%= f.input :company_activity %>
