--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,32 @@
 
-<div class="wrapper">
-  <div class="container bg-white container-padding my-5 blue h-100">
-    <h3>Hello <%= @user.first_name %></h3>
+<div class="wrapper py-3">
+  <div class="container bg-white container-padding">
+    <h3 class= "py-3">Mon compte</h3>
+    <div class="links">
+      <%= link_to "Changer mon profil", edit_user_registration_path, class:"btn btn-primary" %>
+    </div>
+    <div class="utilisateur">
 
-    <ul>
-      <li><%= @user.company.name %></li>
-    </ul>
+      <div class="profile">
+        <h2 class="text-center green-bg-no-inline m-5"> Profil </h2>
+        <div class="profile-content">
+          <div class="row">
+            <div class="col-lg-6 pl-lg-5">
+              <p><strong>Prénom :</strong> <em><%= @user.first_name %></em></p>
+              <p><strong>Nom :</strong><em><%= @user.last_name %></em></p>
+              <p><strong>Nom de l'entreprise :</strong> <em><%= @user.company.name %></em></p>
+              <p><strong>Poste :</strong> <em><%= @user.role %></em></p>
+            </div>
+            <div class="col-lg-6 pl-lg-5">
+              <p><strong>Email :</strong> <em><%= @user.email %></em></p>
+              <p><strong>Téléphone :</strong> <em><%= @user.telephone %></em></p>
+              <p><strong>Newsletter Ekolo[geek] :</strong> <em><%= @user.newsletter_ekg %></em></p>
+              <p><strong>Newsletter DZD :</strong> <em><%= @user.newsletter_ekg %></em></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
