--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container">
     <div class="bg-white container-padding my-5">
       <h1 class="header text-primary text-center pt-5 mt-5">S'inscrire</h1>
