--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container bg-white container-padding my-5 blue">
     <%= link_to "test du wizard", big_form_path(:company_infos) %>
     <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pro !</b></h2>
@@ -131,4 +131,3 @@
   </div>
   <%= render 'shared/footer' %>
 </div>
-
