--- a/app/views/pages/politique_de_confidentialite.html.erb
+++ b/app/views/pages/politique_de_confidentialite.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container">
     <h1 class='text-center pt-5'>Mentions légales et politique de confidentialité</h1>
 
