--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper h-100">
+<div class="wrapper down h-100">
   <div class="container">
     <div id="pourquoi1"></div>
     <h1 class="header text-primary text-center pt-5 mt-5 mb-0">Pourquoi</h1>
