--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container">
     <div id="soutenir1"></div>
     <div id="soutenir4"></div>
