--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container">
     <div class="container-soutenir">
       <h1 class="header text-primary mt-5 pt-5 text-center">Contact</h1>
