--- a/app/views/pages/plan.html.erb
+++ b/app/views/pages/plan.html.erb
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<div class="wrapper down">
   <div class="container mt-5">
     <h1 class="header text-primary  text-center pt-5">Plan du site</h1>
     <ul class="bullet-custom bullet-secondary">
