--- a/app/views/big_form/company_willing.html.erb
+++ b/app/views/big_form/company_willing.html.erb
@@ -5,19 +5,15 @@
   <p class="mb-4">Pour répondre aux questions suivantes, veuillez vous mettre à la place de votre structure et répondez en tant que référent de la structure</p>
 
   <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
-    <!-- cases à cocher -->
-    <%= f.input :structure_sensitivity, label: "12. Dans quelle mesure votre structure est-elle sensible aux enjeux environnementaux ?", collection: ["0", "1", "2", "3", "4"], as: :select, prompt: "Choisissez" %>
-    <!-- cases à cocher -->
-    <%= f.input :structure_environment_strategy, label: "13. Dans quelle mesure l'environnement fait-il partie de la politique/stratégie de votre structure ?", collection: ["0", "1", "2", "3", "4"], as: :select, prompt: "Choisissez" %>
-    <div class="ml-3">
+      <%= f.input :structure_sensitivity, label: "12. Dans quelle mesure votre structure est-elle sensible aux enjeux environnementaux ?", collection: ["0", "1", "2", "3", "4"], as: :radio_buttons %>
+      <%= f.input :structure_environment_strategy, label: "13. Dans quelle mesure l'environnement fait-il partie de la politique/stratégie de votre structure ?", collection: ["0", "1", "2", "3", "4"], as: :radio_buttons %>
+    <div class="pl-4">
       <%= f.input :structure_environment_strategy_examples, label: "Veuillez donner des exemples pour illustrer votre choix précédent." %>
     </div>
-    <!-- cases à cocher -->
-    <%= f.input :structure_ecologic_approach, label: "14. Votre structure est-elle engagée dans une démarche éco-responsable ?", collection: ["Oui", "Non", "Non communiqué"], as: :select, prompt: "Choisissez" %>
+    <%= f.input :structure_ecologic_approach, label: "14. Votre structure est-elle engagée dans une démarche éco-responsable ?", collection: ["Oui", "Non", "Non communiqué"], as: :radio_buttons %>
     <!-- à rajouter q15 -->
     <%= f.input :structure_concrete_actions, label: "16. Quelles actions concrètes sont actuellement menées en faveur de l'environnement dans votre structure (dans la gestion de l'eau, de l'énergie, réduction des déchets...)?" %>
-    <!-- cases à cocher -->
-    <%= f.input :structure_direction_interest, label: "17. Dans quelle mesure la direction de votre structure exprime-t-elle de l’intérêt pour ce Défi Zéro Déchets des Pros ?", collection: ["0", "1", "2", "3", "4"], as: :select, prompt: "Choisissez"  %>
+      <%= f.input :structure_direction_interest, label: "17. Dans quelle mesure la direction de votre structure exprime-t-elle de l’intérêt pour ce Défi Zéro Déchets des Pros ?", collection: ["0", "1", "2", "3", "4"], as: :radio_buttons %>
     <%= f.input :structure_direction_interest_reasons, label: "18. Pour quelles raisons votre structure souhaite-t-elle participer à ce défi ?" %>
     <%= f.input :structure_expectations, label: "19. Quelles sont les attentes de votre structure concernant ce Défi Zéro Déchet des Pros ?" %>
     <div class="d-flex justify-content-around mb-5 mt-4">
