--- a/app/views/big_form/trash_gestion.html.erb
+++ b/app/views/big_form/trash_gestion.html.erb
@@ -5,22 +5,18 @@
 
   <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
     <!-- <p>#rajouter la q5</p> -->
-    <!-- 6 à transformer en cases à cocher -->
-    <%= f.input :trash_indicator, label: "6. Disposez-vous d'indicateurs de suivi de votre production de déchets ? (exemple : kg/mois, litre/semaine, nombre de bacs ou poubelles...)", collection: ["Oui", "Non", "Non communiqué"], as: :select, prompt: "Choisissez" %>
-    <div class="ml-3">
+    <%= f.input :trash_indicator, label: "6. Disposez-vous d'indicateurs de suivi de votre production de déchets ? (exemple : kg/mois, litre/semaine, nombre de bacs ou poubelles...)", collection: ["Oui", "Non", "Non communiqué"], as: :radio_buttons %>
+    <div class="pl-4">
       <%= f.input :trash_indicator_list, label: "Si oui, lesquels ?" %>
     </div>
     <%= f.input :trash_types, label: "7. Quels sont les 3 principaux types de déchets produits dans votre structure ?" %>
     <!-- <p>#rajouter la q8</p> -->
-    <!-- 9 à transformer en cases à cocher -->
-    <%= f.input :trash_sorting, label: "9. Votre structure fait-elle le tri des déchets ?", collection: ["Oui", "Non", "Non communiqué"], as: :select, prompt: "Choisissez" %>
-    <div class="ml-3">
+    <%= f.input :trash_sorting, label: "9. Votre structure fait-elle le tri des déchets ?", collection: ["Oui", "Non", "Non communiqué"], as: :radio_buttons %>
+    <div class="pl-4">
       <%= f.input :trash_sorting_types, label:"Si oui, pour quels types de déchets ?" %>
     </div>
-    <!-- 10 à mettre en cases à cocher -->
-    <%= f.input :trash_sorting_quality, label: "10. Que pensez-vous de la qualité du tri dans votre structure ?", collection: ["0", "1", "2", "3", "4"], as: :select, prompt: "Choisissez" %>
-    <!-- 11 à mettre en cases à cocher -->
-    <%= f.input :trash_sorting_knowledge, label: "11. Dans quelle mesure votre structure connaît-elle l'obligation de tri 5 flux ?", collection: ["0", "1", "2", "3", "4"], as: :select, prompt: "Choisissez" %>
+    <%= f.input :trash_sorting_quality, label: "10. Que pensez-vous de la qualité du tri dans votre structure ?", collection: ["0", "1", "2", "3", "4"], as: :radio_buttons %>
+    <%= f.input :trash_sorting_knowledge, label: "11. Dans quelle mesure votre structure connaît-elle l'obligation de tri 5 flux ?", collection: ["0", "1", "2", "3", "4"], as: :radio_buttons %>
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
       <%= f.button :submit, "Suivant >", class:"btn btn-primary bold" %>
