radio buttons personnalisés

--- a/app/views/big_form/company_infos.html.erb
+++ b/app/views/big_form/company_infos.html.erb
@@ -6,17 +6,25 @@
   <p class="mb-0">Toutes les réponses que vous nous communiquez ci-après resteront confidentielles entre vous et les accompagnateurs Ekolo[geek].</p>
 
   <p class="text-center mt-4">Progression : <b>page 1 sur 5</b> </p>
-
   <h2 class="mt-4 mb-4 green-bg">Généralités</h2>
 
   <%= simple_form_for(@form, method: :put, url: wizard_path) do |f| %>
+    <p>1. Quelle est l’activité de votre structure ?</p>
     <div class="col-12 col-sm-6 pl-0">
-      <%= f.input :company_activity, label: "1. Quelle est l’activité de votre structure ?", placeholder: "Réponse courte" %>
+      <%= f.input :company_activity, label: false, placeholder: "Réponse courte" %>
     </div>
-    <!-- <p>à transformer en case à cocher</p> -->
-    <%= f.input :company_employees_nb, label: "2. Quelle est la taille de votre structure ?", collection: ["Moins de 10 salarié·e·s", "De 10 à 49 salarié·e·s", "De 50 à 100 salarié·e·s", "De 101 à 200 salarié·e·s", "Plus de 200 salarié·e·s"], as: :radio_buttons %>
+
+    <p>2. Quelle est la taille de votre structure ?</p>
+    <%= f.collection_radio_buttons :company_employees_nb, ["Moins de 10 salarié·e·s", "De 10 à 49 salarié·e·s", "De 50 à 100 salarié·e·s", "De 101 à 200 salarié·e·s", "Plus de 200 salarié·e·s"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+
+    <p>3. Quelle est la taille de l'établissement ou du service qui participerait au Défi Zéro Déchet des Pros ?</p>
     <div class="col-12 col-sm-6 pl-0">
-      <%= f.input :company_participant_nb, label: "3. Quelle est la taille de l'établissement ou du service qui participerait au Défi Zéro Déchet des Pros ?", placeholder: "Nombre de salarié·e·s" %>
+      <%= f.input :company_participant_nb, label: false, placeholder: "Nombre de salarié·e·s" %>
     </div>
     <!-- 4. Comment avez vous connu le défi zéro déchets des pros ? à rajouter -->
     <div class="d-flex justify-content-end mb-5 mt-4">
