--- a/app/views/big_form/referent_willing.html.erb
+++ b/app/views/big_form/referent_willing.html.erb
@@ -23,23 +23,45 @@
       <%= f.input :referent_fun, label: "C’est intéressant et amusant de le faire ", collection: ["Pas du tout correspondant", "Peu correspondant", "Moyennement correspondant", "Bien correspondant", "Tout à fait correspondant"], as: :select %>
     </div>
 
-    <%= f.input :referent_techniques, label:"25. Connaissez-vous par hasard des pratiques de réduction de déchets ?", collection: ["Oui", "Non", "Non communiqué"], as: :radio_buttons%>
+    <p>25. Connaissez-vous par hasard des pratiques de réduction de déchets ?</p>
+    <%= f.collection_radio_buttons :referent_techniques, ["Oui", "Non", "Non communiqué"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
     <div class="pl-4">
       <%= f.input :referent_techniques_examples, label: "Si Oui, donnez des exemples " %>
     </div>
-    <%= f.input :referent_actions_home, label: "26. Chez vous, adoptez-vous déjà des pratiques de réduction de déchets ?", collection: ["Oui", "Non", "Non communiqué"], as: :radio_buttons %>
+
+    <p>26. Chez vous, adoptez-vous déjà des pratiques de réduction de déchets ?</p>
+    <%= f.collection_radio_buttons :referent_actions_home, ["Oui", "Non", "Non communiqué"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
     <div class="pl-4">
       <%= f.input :referent_actions_home_examples, label: "Si Oui, donnez des exemples " %>
     </div>
     <%= f.input :referent_personal_reasons, label: "27. Quelles sont les raisons personnelles pour lesquelles vous souhaitez participer à ce défi ?" %>
     <%= f.input :referent_changes_wanted, label: "28. Que voudriez-vous voir changer dans votre structure au niveau des déchets ?" %>
     <%= f.input :referent_accompaniment_need, label: "29. Sur quoi aimeriez-vous être accompagné·e pour mener à bien ce Défi Zéro Déchet des Pros ?" %>
-    <%= f.input :referent_sex, label: "30. Vous êtes", collection: ["Un homme", "Une femme", "Je ne souhaite pas le préciser"], as: :radio_buttons %>
+
+    <p>30. Vous êtes</p>
+    <%= f.collection_radio_buttons :referent_sex, ["Un homme", "Une femme", "Je ne souhaite pas le préciser"], :to_s, :to_s do |input| %>
+      <label class="mx-2 mb-3">
+        <%= input.radio_button %>
+        <%= input.text %>
+      </label>
+    <% end %>
+
     <div class="col-12 col-sm-6 pl-0">
       <%= f.input :referent_age, label: "31. Votre âge" %>
       <%= f.input :referent_seniority, label: "32. Depuis combien d'années travaillez-vous dans votre structure ?" %>
       <%= f.input :referent_service, label: "33. Dans quel service travaillez-vous ?" %>
     </div>
+
     <div class="d-flex justify-content-around mb-5 mt-4">
       <%= link_to "< Précédent", previous_wizard_path, class:"btn btn-primary bold" %>
       <%= f.button :submit, "Envoyer", class:"btn btn-primary bold" %>
