--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,30 @@
 <div class="wrapper ">
   <div class="container viewport space-top">
-    <div class="bg-white container-padding my-5">
+    <div class="bg-white container-padding">
       <h3 class="my-3 pt-4">Structure</h3>
-      <div class="structure">
+      <div class="structure field m-1">
         <p><strong>Nom de l'entreprise :</strong> <em><%= @user.company.name %></em></p>
       </div>
       <h3 class="my-3">Référent·e</h3>
       <div class="row">
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 field m-1">
           <strong>Civilité :</strong> <em><%= @user.civility %></em>
         </div>
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 field m-1">
           <strong>Prénom :</strong> <em><%= @user.first_name %></em>
         </div>
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 field m-1">
           <strong>Nom :</strong><em><%= @user.last_name.upcase %></em>
         </div>
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 field m-1">
           <strong>Poste :</strong> <em><%= @user.role %></em>
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-3 field m-1">
           <strong>Téléphone :</strong> <em><%= @user.telephone %></em>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 field m-1">
           <strong>Email :</strong> <em><%= @user.email %></em>
         </div>
       </div>
